# telegram-flashcard-bot

./: main.py  pyproject.toml
